clang/test/BSC/Negative/OwnedStruct/access/owned-struct-private-member-access.cbs
// RUN: %clang_cc1 -verify %s

owned struct A {
    int a;
    public:
        int l(A* this) {
            return this->f(); // ok
        }
    private:
        int f(A* this);
        int q(A* this);
        int m(A* this) {
            return this->f(); // ok
        }
};

int A::g(A* this) {
    return this->f(); // expected-error {{'f' is a private member of 'struct A'}}
}

int A::q(A* this);
int A::q(A* this) {
    return this->f(); // ok
}

struct B {};

int struct B::f(A* ref) {
    return ref->f(); // expected-error {{'f' is a private member of 'struct A'}}
}

int main() {
    A a;
    a.a;    // expected-error {{'a' is a private member of 'struct A'}}
    a.f(); // expected-error {{'f' is a private member of 'struct A'}}
    return 0 ;
}